[package]
name = "jwt-rs"
version = "0.1.0"
authors = ["Darth-Revan <S1610304005@students.fh-hagenberg.at>"]
edition = "2018"
license-file = "LICENSE"
description = "An implementation of JSON Web Tokens using serde for secure (de)serialization"
repository = "https://github.com/Darth-Revan/jwt-rs"
readme = "README.md"
categories = ["data-structures", "encoding", "web-programming"]
keywords = ["api", "json", "web", "jwt", "token"]

[dependencies]
serde = "^1.0"
serde_derive = "^1"
serde_json = "^1"
openssl = ">=0.10.20"
base64 = "^0.10"
chrono = "0.4"

[dev-dependencies]
lazy_static = "^1"

[lib]
name = "jwt_rs"
path = "src/lib.rs"

[features]
no-ecdsa = []

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4
incremental = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
incremental = false
overflow-checks = false
